[project]
name = "cosim_launcher"
version = "0.1.0"
description = "OEDISI cosim launcher"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask[async]>=3.1.3",
    "helics>=3.6.1",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "requests>=2.33.0",
    "httpx",
    "oedisi~=3.0",
]
